--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint": "^8.19.0",
     "form-data": "^4.0.0",
     "jest": "^29.7.0",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "sharp": "^0.34.3"
   },
   "engines": {
     "node": ">=18"
