Add detailed logging for debugging icon and URL configuration
- Add console logs to track configuration process
- Improve error handling for icon downloads
- URL is now correctly updated to vpvmall.com
- Icon URL returns HTML instead of image, causing fallback to default icon

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,14 +19,14 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
     
-    namespace 'com.apppackaging'
+    namespace 'com.vpvmall.app'
 
     defaultConfig {
-        applicationId "com.apppackaging"
+        applicationId "com.vpvmall.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         missingDimensionStrategy 'react-native-camera', 'general'
         
         // APK 크기 최적화 - ARM 아키텍처만 포함
