Implement FCM push notification support
- Install @react-native-firebase/app and @react-native-firebase/messaging
- Add FCM initialization in App.js with graceful fallback
- Configure FCM service with token generation and message handlers
- Make google-services.json optional (can be provided via firebase_config_url)
- Add conditional Google Services plugin application in build.gradle
- Remove manual FCMService declaration from AndroidManifest (handled by RN Firebase)
- Pass FCM token to WebView for web integration
- Add detailed logging for Firebase configuration process

FCM will only be activated when google-services.json is provided via:
- firebase_config_url parameter in build trigger
- Or manual placement in android/app/ directory

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,3 +89,8 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Apply Google Services plugin only if google-services.json exists
+if (file("google-services.json").exists()) {
+    apply plugin: 'com.google.gms.google-services'
+}
