--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.1.1",
+    "@react-native-firebase/messaging": "^23.1.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-orientation-locker": "^1.7.0",
