Fix Firebase Messaging manifest conflict and update Node version
- Remove duplicate default_notification_channel_id from AndroidManifest.xml
- @react-native-firebase/messaging already defines this channel
- Update Node.js version to 20 in GitHub Actions (required by Firebase SDK)
- This fixes the manifest merger error during build

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -68,10 +68,8 @@
         <!-- Firebase Messaging Service is handled by @react-native-firebase/messaging -->
         <!-- No need to declare the service manually -->
         
-        <!-- Firebase Messaging default notification channel -->
-        <meta-data
-            android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="default_notification_channel" />
+        <!-- Firebase Messaging default notification channel - Removed to avoid conflict with @react-native-firebase/messaging -->
+        <!-- The channel is already defined by @react-native-firebase/messaging -->
             
         <!-- Firebase Messaging auto-init -->
         <meta-data
