--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -17,19 +17,58 @@ jobs:
     - name: 📥 Checkout repository
       uses: actions/checkout@v4
     
+    - name: 🔍 Fetch build configuration from API
+      id: fetch-config
+      run: |
+        echo "📡 Fetching configuration for build ID: ${{ github.event.client_payload.build_id }}"
+        
+        # API 호출하여 설정 가져오기
+        CONFIG_URL="https://system.withcookie.com/api/app-builder/github/config/${{ github.event.client_payload.build_id }}"
+        echo "🔗 API URL: $CONFIG_URL"
+        
+        # curl로 API 호출 및 응답 저장
+        HTTP_STATUS=$(curl -s -w "%{http_code}" -o build_config.json "$CONFIG_URL")
+        
+        if [ "$HTTP_STATUS" -eq 200 ]; then
+          echo "✅ Successfully fetched build configuration"
+          cat build_config.json
+          
+          # JSON 파싱하여 환경 변수로 설정
+          echo "APP_NAME=$(jq -r '.app_name // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "PACKAGE_NAME=$(jq -r '.package_name // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "APP_URL=$(jq -r '.app_url // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "VERSION_NAME=$(jq -r '.version_name // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "VERSION_CODE=$(jq -r '.version_code // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "PLATFORM=$(jq -r '.platform // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "BUILD_TYPE=$(jq -r '.build_type // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "PRIMARY_COLOR=$(jq -r '.primary_color // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "ICON_URL=$(jq -r '.icon_url // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "FIREBASE_CONFIG_URL=$(jq -r '.firebase_config_url // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "KEYSTORE_URL=$(jq -r '.keystore_url // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "KEYSTORE_PASSWORD=$(jq -r '.keystore_password // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "KEY_ALIAS=$(jq -r '.key_alias // empty' build_config.json)" >> $GITHUB_OUTPUT
+          echo "KEY_PASSWORD=$(jq -r '.key_password // empty' build_config.json)" >> $GITHUB_OUTPUT
+          
+          echo "CONFIG_FETCHED=true" >> $GITHUB_OUTPUT
+        else
+          echo "⚠️ Failed to fetch configuration (HTTP $HTTP_STATUS), using client_payload values"
+          echo "CONFIG_FETCHED=false" >> $GITHUB_OUTPUT
+        fi
+    
     - name: 📋 Display build configuration
       run: |
         echo "🔧 Build Configuration:"
         echo "  Build ID: ${{ github.event.client_payload.build_id || 'test-build' }}"
-        echo "  App Name: ${{ github.event.client_payload.app_name || 'TestApp' }}"
-        echo "  Package Name: ${{ github.event.client_payload.package_name || 'com.test.app' }}"
-        echo "  Platform: ${{ github.event.client_payload.platform || 'android' }}"
-        echo "  Build Type: ${{ github.event.client_payload.build_type || 'apk' }}"
-        echo "  Base URL: ${{ github.event.client_payload.base_url || github.event.client_payload.app_url || 'https://test.com' }}"
-        echo "  Version Name: ${{ github.event.client_payload.version_name || '1.0.0' }}"
-        echo "  Version Code: ${{ github.event.client_payload.version_code || '1' }}"
-        echo "  Build Number: ${{ github.event.client_payload.build_number || github.event.client_payload.version_code || '1' }}"
+        echo "  App Name: ${{ steps.fetch-config.outputs.APP_NAME || github.event.client_payload.app_name || 'TestApp' }}"
+        echo "  Package Name: ${{ steps.fetch-config.outputs.PACKAGE_NAME || github.event.client_payload.package_name || 'com.test.app' }}"
+        echo "  Platform: ${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}"
+        echo "  Build Type: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type || 'apk' }}"
+        echo "  Base URL: ${{ steps.fetch-config.outputs.APP_URL || github.event.client_payload.base_url || github.event.client_payload.app_url || 'https://test.com' }}"
+        echo "  Version Name: ${{ steps.fetch-config.outputs.VERSION_NAME || github.event.client_payload.version_name || '1.0.0' }}"
+        echo "  Version Code: ${{ steps.fetch-config.outputs.VERSION_CODE || github.event.client_payload.version_code || '1' }}"
+        echo "  Primary Color: ${{ steps.fetch-config.outputs.PRIMARY_COLOR || github.event.client_payload.primary_color || '#2F80ED' }}"
         echo "  Event: ${{ github.event_name }}"
+        echo "  Config Source: ${{ steps.fetch-config.outputs.CONFIG_FETCHED == 'true' && 'API' || 'client_payload' }}"
     
     - name: 🟢 Setup Node.js
       uses: actions/setup-node@v4
@@ -38,14 +77,14 @@ jobs:
     
     # Android 전용 설정
     - name: ☕ Setup JDK (Android)
-      if: github.event.client_payload.platform == 'android' || github.event.client_payload.platform == null
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android') == 'android'
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: ${{ env.JAVA_VERSION }}
     
     - name: 🤖 Setup Android SDK (Android)
-      if: github.event.client_payload.platform == 'android' || github.event.client_payload.platform == null
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android') == 'android'
       uses: android-actions/setup-android@v3
       with:
         api-level: 34
@@ -54,13 +93,13 @@ jobs:
     
     # iOS 전용 설정
     - name: 🍎 Setup Xcode (iOS)
-      if: github.event.client_payload.platform == 'ios'
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform) == 'ios'
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '15.0'
     
     - name: 🍎 Setup CocoaPods (iOS)
-      if: github.event.client_payload.platform == 'ios'
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform) == 'ios'
       uses: maxim-lobanov/setup-cocoapods@v1
       with:
         version: latest
@@ -76,49 +115,50 @@ jobs:
     - name: 🔧 Configure app settings
       env:
         BUILD_ID: ${{ github.event.client_payload.build_id || 'test-build' }}
-        APP_NAME: ${{ github.event.client_payload.app_name || 'TestApp' }}
-        PACKAGE_NAME: ${{ github.event.client_payload.package_name || 'com.test.app' }}
-        PLATFORM: ${{ github.event.client_payload.platform || 'android' }}
-        BASE_URL: ${{ github.event.client_payload.base_url || github.event.client_payload.app_url || 'https://withcookie.com' }}
-        APP_ICON_URL: ${{ github.event.client_payload.icon_url || github.event.client_payload.app_icon_url }}
-        FIREBASE_CONFIG_URL: ${{ github.event.client_payload.firebase_config_url }}
-        KEYSTORE_URL: ${{ github.event.client_payload.keystore_url }}
-        KEYSTORE_PASSWORD: ${{ github.event.client_payload.keystore_password }}
-        KEY_ALIAS: ${{ github.event.client_payload.key_alias }}
-        KEY_PASSWORD: ${{ github.event.client_payload.key_password }}
-        BUILD_TYPE: ${{ github.event.client_payload.build_type || 'apk' }}
-        VERSION_CODE: ${{ github.event.client_payload.version_code || '1' }}
-        VERSION_NAME: ${{ github.event.client_payload.version_name || '1.0.0' }}
-        BUILD_NUMBER: ${{ github.event.client_payload.build_number || github.event.client_payload.version_code || '1' }}
-        MARKETING_VERSION: ${{ github.event.client_payload.marketing_version || github.event.client_payload.version_name || '1.0.0' }}
+        APP_NAME: ${{ steps.fetch-config.outputs.APP_NAME || github.event.client_payload.app_name || 'TestApp' }}
+        PACKAGE_NAME: ${{ steps.fetch-config.outputs.PACKAGE_NAME || github.event.client_payload.package_name || 'com.test.app' }}
+        PLATFORM: ${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}
+        BASE_URL: ${{ steps.fetch-config.outputs.APP_URL || github.event.client_payload.base_url || github.event.client_payload.app_url || 'https://withcookie.com' }}
+        APP_ICON_URL: ${{ steps.fetch-config.outputs.ICON_URL || github.event.client_payload.icon_url || github.event.client_payload.app_icon_url }}
+        FIREBASE_CONFIG_URL: ${{ steps.fetch-config.outputs.FIREBASE_CONFIG_URL || github.event.client_payload.firebase_config_url }}
+        KEYSTORE_URL: ${{ steps.fetch-config.outputs.KEYSTORE_URL || github.event.client_payload.keystore_url }}
+        KEYSTORE_PASSWORD: ${{ steps.fetch-config.outputs.KEYSTORE_PASSWORD || github.event.client_payload.keystore_password }}
+        KEY_ALIAS: ${{ steps.fetch-config.outputs.KEY_ALIAS || github.event.client_payload.key_alias }}
+        KEY_PASSWORD: ${{ steps.fetch-config.outputs.KEY_PASSWORD || github.event.client_payload.key_password }}
+        BUILD_TYPE: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type || 'apk' }}
+        VERSION_CODE: ${{ steps.fetch-config.outputs.VERSION_CODE || github.event.client_payload.version_code || '1' }}
+        VERSION_NAME: ${{ steps.fetch-config.outputs.VERSION_NAME || github.event.client_payload.version_name || '1.0.0' }}
+        BUILD_NUMBER: ${{ steps.fetch-config.outputs.VERSION_CODE || github.event.client_payload.build_number || github.event.client_payload.version_code || '1' }}
+        MARKETING_VERSION: ${{ steps.fetch-config.outputs.VERSION_NAME || github.event.client_payload.marketing_version || github.event.client_payload.version_name || '1.0.0' }}
+        PRIMARY_COLOR: ${{ steps.fetch-config.outputs.PRIMARY_COLOR || github.event.client_payload.primary_color }}
       run: |
         node scripts/configure-app.js
     
     # Android 빌드
     - name: 🤖 Build Android App
-      if: github.event.client_payload.platform == 'android' || github.event.client_payload.platform == null
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android') == 'android'
       env:
-        BUILD_TYPE: ${{ github.event.client_payload.build_type || 'apk' }}
+        BUILD_TYPE: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type || 'apk' }}
         BUILD_MODE: release
-        APP_NAME: ${{ github.event.client_payload.app_name || 'TestApp' }}
-        PACKAGE_NAME: ${{ github.event.client_payload.package_name || 'com.test.app' }}
-        VERSION_CODE: ${{ github.event.client_payload.version_code || '1' }}
-        VERSION_NAME: ${{ github.event.client_payload.version_name || '1.0.0' }}
-        KEYSTORE_URL: ${{ github.event.client_payload.keystore_url }}
-        KEYSTORE_PASSWORD: ${{ github.event.client_payload.keystore_password }}
+        APP_NAME: ${{ steps.fetch-config.outputs.APP_NAME || github.event.client_payload.app_name || 'TestApp' }}
+        PACKAGE_NAME: ${{ steps.fetch-config.outputs.PACKAGE_NAME || github.event.client_payload.package_name || 'com.test.app' }}
+        VERSION_CODE: ${{ steps.fetch-config.outputs.VERSION_CODE || github.event.client_payload.version_code || '1' }}
+        VERSION_NAME: ${{ steps.fetch-config.outputs.VERSION_NAME || github.event.client_payload.version_name || '1.0.0' }}
+        KEYSTORE_URL: ${{ steps.fetch-config.outputs.KEYSTORE_URL || github.event.client_payload.keystore_url }}
+        KEYSTORE_PASSWORD: ${{ steps.fetch-config.outputs.KEYSTORE_PASSWORD || github.event.client_payload.keystore_password }}
       run: |
         chmod +x scripts/build-android.sh
         scripts/build-android.sh
     
     # iOS 빌드
     - name: 🍎 Build iOS App
-      if: github.event.client_payload.platform == 'ios'
+      if: (steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform) == 'ios'
       env:
         BUILD_MODE: release
-        APP_NAME: ${{ github.event.client_payload.app_name }}
-        PACKAGE_NAME: ${{ github.event.client_payload.package_name }}
-        BUILD_NUMBER: ${{ github.event.client_payload.build_number || github.event.client_payload.version_code || '1' }}
-        MARKETING_VERSION: ${{ github.event.client_payload.marketing_version || github.event.client_payload.version_name || '1.0.0' }}
+        APP_NAME: ${{ steps.fetch-config.outputs.APP_NAME || github.event.client_payload.app_name }}
+        PACKAGE_NAME: ${{ steps.fetch-config.outputs.PACKAGE_NAME || github.event.client_payload.package_name }}
+        BUILD_NUMBER: ${{ steps.fetch-config.outputs.VERSION_CODE || github.event.client_payload.build_number || github.event.client_payload.version_code || '1' }}
+        MARKETING_VERSION: ${{ steps.fetch-config.outputs.VERSION_NAME || github.event.client_payload.marketing_version || github.event.client_payload.version_name || '1.0.0' }}
       run: |
         chmod +x scripts/build-ios.sh
         scripts/build-ios.sh
@@ -127,8 +167,11 @@ jobs:
     - name: 📦 Prepare build artifacts
       id: prepare-artifacts
       run: |
-        if [ "${{ github.event.client_payload.platform || 'android' }}" = "android" ]; then
-          if [ "${{ github.event.client_payload.build_type }}" = "aab" ]; then
+        PLATFORM="${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}"
+        BUILD_TYPE="${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type || 'apk' }}"
+        
+        if [ "$PLATFORM" = "android" ]; then
+          if [ "$BUILD_TYPE" = "aab" ]; then
             BUILD_FILE=$(find android/app/build/outputs/bundle -name "*.aab" | head -1)
           else
             BUILD_FILE=$(find android/app/build/outputs/apk/release -name "*.apk" | head -1)
@@ -154,10 +197,10 @@ jobs:
         GITHUB_REPOSITORY: ${{ github.repository }}
         GITHUB_RUN_ID: ${{ github.run_id }}
         BUILD_ID: ${{ github.event.client_payload.build_id || 'test-build' }}
-        PLATFORM: ${{ github.event.client_payload.platform || 'android' }}
-        BUILD_TYPE: ${{ github.event.client_payload.build_type || 'apk' }}
+        PLATFORM: ${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}
+        BUILD_TYPE: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type || 'apk' }}
         S3_UPLOAD_URL: ${{ github.event.client_payload.s3_upload_url }}
-        ARTIFACT_NAME: build-${{ github.event.client_payload.platform || 'android' }}-${{ github.event.client_payload.build_id || 'test-build' }}
+        ARTIFACT_NAME: build-${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}-${{ github.event.client_payload.build_id || 'test-build' }}
       run: |
         echo "📥 Generating download information..."
         node scripts/generate-artifact-url.js
@@ -167,8 +210,8 @@ jobs:
       continue-on-error: true
       env:
         BUILD_ID: ${{ github.event.client_payload.build_id }}
-        PLATFORM: ${{ github.event.client_payload.platform }}
-        BUILD_TYPE: ${{ github.event.client_payload.build_type }}
+        PLATFORM: ${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform }}
+        BUILD_TYPE: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type }}
         S3_UPLOAD_URL: ${{ github.event.client_payload.s3_upload_url }}
         BUILD_FILE: ${{ steps.prepare-artifacts.outputs.build_file }}
         REFRIGERATOR_UNLIMITED_KEY: ${{ secrets.REFRIGERATOR_UNLIMITED_KEY || 'UNLIMITED2024' }}
@@ -198,8 +241,8 @@ jobs:
       if: always()
       env:
         BUILD_ID: ${{ github.event.client_payload.build_id }}
-        PLATFORM: ${{ github.event.client_payload.platform }}
-        BUILD_TYPE: ${{ github.event.client_payload.build_type }}
+        PLATFORM: ${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform }}
+        BUILD_TYPE: ${{ steps.fetch-config.outputs.BUILD_TYPE || github.event.client_payload.build_type }}
         S3_UPLOAD_URL: ${{ github.event.client_payload.s3_upload_url }}
         BUILD_STATUS: ${{ job.status }}
       run: |
@@ -236,7 +279,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: build-${{ github.event.client_payload.platform }}-${{ github.event.client_payload.build_id }}
+        name: build-${{ steps.fetch-config.outputs.PLATFORM || github.event.client_payload.platform || 'android' }}-${{ github.event.client_payload.build_id || 'test-build' }}
         path: |
           android/app/build/outputs/**/*.apk
           android/app/build/outputs/**/*.aab
