--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-native/eslint-config": "0.75.2",
     "@react-native/metro-config": "0.75.2",
     "@react-native/typescript-config": "0.75.2",
+    "archiver": "^5.3.2",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.4",
     "babel-jest": "^29.7.0",
