--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <package android:name="com.ssg.serviceapp.android.easypaymentsservice" />
         <package android:name="com.lotte.lpay" />
         <package android:name="com.kbankwith.smartbank" />
+        <package android:name="viva.republica.toss" />
         <package android:name="com.toss" />
         <package android:name="kvp.jjy.MispAndroid320" />
         <package android:name="com.kftc.bankpay.android" />
